[project]
name = "datastore_utilities"
version = "0.1.0-dev0"
license = "MIT"
description = "Development utilities for datastore-python"
maintainers = [
  {name = "Johann Scholtz", email = "johann.scholtz@emerson.com"},
  {name = "Joel Dixon", email = "joel.dixon@emerson.com"}
]
readme = "README.md"
repository = "https://github.com/ni/datastore-python"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["dependencies"]
requires-python = '>=3.10,<4.0'

[[tool.poetry.packages]]
include = "utilities"
from = "src"

[tool.poetry]
requires-poetry = '>=2.1,<3.0'

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.lint.dependencies]
ni-python-styleguide = ">=0.4.1"
mypy = ">=1.0"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
mypy_path = "src"
files = "."
namespace_packages = true
strict = true
explicit_package_bases = true
