[project]
name = "system_example"
version = "0.1.0.dev0"
description = "Example demonstrating how to detect, publish, and query system hardware and software resources"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
